Remove activities and add "Serch" endpoint
