# docs/swagger.yaml
@@ -1,79 +1,4 @@
 definitions:
-  utils.Activity:
-    properties:
-      average_heart_rate:
-        example: 140
-        type: number
-      average_speed:
-        example: 5.2
-        type: number
-      created_at:
-        example: "2025-05-11T08:00:00Z"
-        type: string
-      description:
-        example: A refreshing morning run in the park
-        type: string
-      distance:
-        example: 5.5
-        type: number
-      end_time:
-        example: "2025-05-11T09:00:00Z"
-        type: string
-      id:
-        example: 1
-        type: integer
-      maximum_elevation:
-        example: 350
-        type: number
-      start_time:
-        example: "2025-05-11T08:00:00Z"
-        type: string
-      starting_elevation:
-        example: 100
-        type: number
-      title:
-        example: Morning Run
-        type: string
-      total_ascent:
-        example: 250
-        type: number
-      total_descent:
-        example: 200
-        type: number
-      user_id:
-        example: 550e8400-e29b-41d4-a716-446655440000
-        type: string
-    type: object
-  utils.ActivityInput:
-    properties:
-      averageHeartRate:
-        example: 140
-        type: number
-      averageSpeed:
-        example: 5.2
-        type: number
-      distance:
-        example: 5.5
-        type: number
-      endTime:
-        example: "2025-05-11T09:00:00Z"
-        type: string
-      maximumElevation:
-        example: 350
-        type: number
-      startTime:
-        example: "2025-05-11T08:00:00Z"
-        type: string
-      startingElevation:
-        example: 100
-        type: number
-      totalAscent:
-        example: 250
-        type: number
-      totalDescent:
-        example: 200
-        type: number
-    type: object
   utils.ErrorResponse:
     properties:
       error:
@@ -265,6 +190,15 @@ definitions:
         example: Success
         type: string
     type: object
+  utils.UserEssentials:
+    properties:
+      id:
+        example: 550e8400-e29b-41d4-a716-446655440000
+        type: string
+      username:
+        example: John Doe
+        type: string
+    type: object
   utils.UserID:
     properties:
       id:
@@ -286,211 +220,6 @@ definitions:
 info:
   contact: {}
 paths:
-  /activity/:
-    get:
-      consumes:
-      - application/json
-      description: Fetches a list of activities for a user based on their authorization
-        token
-      parameters:
-      - description: Bearer token for user authentication
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: List of activities
-          schema:
-            items:
-              $ref: '#/definitions/utils.Activity'
-            type: array
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "500":
-          description: Failed to get activities
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-      summary: Get a user's activities
-      tags:
-      - activity
-    post:
-      consumes:
-      - application/json
-      description: Allows a user to create a new activity by providing the details
-        of the activity, including start time, end time, distance, and elevation data
-      parameters:
-      - description: Bearer token for user authentication
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Activity input
-        in: body
-        name: activity
-        required: true
-        schema:
-          $ref: '#/definitions/utils.ActivityInput'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Activity created successfully
-          schema:
-            $ref: '#/definitions/utils.SuccessResponse'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "500":
-          description: Failed to save activity
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-      summary: Create a new activity for the user
-      tags:
-      - activity
-  /activity/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Deletes an activity after verifying the user's token and authorization
-        to perform the action
-      parameters:
-      - description: Bearer token for user authentication
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Activity ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Activity deleted successfully
-          schema:
-            $ref: '#/definitions/utils.SuccessResponse'
-        "400":
-          description: Invalid activity ID
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "404":
-          description: Activity not found
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "500":
-          description: Failed to delete activity
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-      summary: Delete an activity by ID
-      tags:
-      - activity
-    get:
-      consumes:
-      - application/json
-      description: Fetches an activity by its ID if the user is authorized to view
-        it
-      parameters:
-      - description: Bearer token for user authentication
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Activity ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Activity details
-          schema:
-            $ref: '#/definitions/utils.Activity'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "404":
-          description: Activity not found
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-      summary: Retrieve an activity by its ID
-      tags:
-      - activity
-    put:
-      consumes:
-      - application/json
-      description: Update an existing activity by ID
-      parameters:
-      - description: Bearer token for user authentication
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Activity ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Activity ended successfully
-          schema:
-            $ref: '#/definitions/utils.SuccessResponse'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "404":
-          description: Activity not found
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "500":
-          description: Failed to update activity
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-      summary: Update an existing activity
-      tags:
-      - activity
   /auth/login:
     post:
       consumes:
@@ -887,6 +616,50 @@ paths:
       summary: Get user profile by token
       tags:
       - profile
+  /search:
+    get:
+      consumes:
+      - application/json
+      description: Searches for users by username
+      parameters:
+      - description: Bearer token for user authentication
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Search query
+        in: query
+        name: query
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Returns a list of users matching the search query
+          schema:
+            items:
+              $ref: '#/definitions/utils.UserEssentials'
+            type: array
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "404":
+          description: No users found
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      summary: Search for users by username
+      tags:
+      - search
   /sessions/:
     get:
       description: Get all sessions for a user by their ID
